fixes 5214 - footer not visible when playlist nav spans full width

--- a/docs/sites/all/themes/ssd/sass/mobile.scss
+++ b/docs/sites/all/themes/ssd/sass/mobile.scss
@@ -59,6 +59,12 @@
   #playlist-controller.expanded {
     width: 100%;
   }
+  .node-type-playlist footer.footer {
+    margin-bottom: 68px;
+  }
+  .region-footer {
+    margin: 0;
+  }
 }
 
 /* Shrink navbar search input as screen gets smaller */
